# code_puppy

./: .env  .env.example  .envrc  .gitignore  .looper.yml  .pre-commit-config.yaml  .sentinelpolicy  0001-feat-add-message-queue-to-be-used-by-both-interactiv.patch  0002-Add-file-browser-to-TUI-sidebar-with-tree-structure.patch  0003-Fix-Rich-markdown-rendering-in-message-system.patch  0004-Fix-TUI-message-display-startup-messages-and-Rich-ob.patch  0005-Complete-TUI-message-display-fix-all-startup-message.patch  AGENT.md  AGENTS.md  AGENT_CREATOR.md  AGENT_CREATOR_CURRENT_STATE_VERIFIED.md  AGENT_CREATOR_GUI_CUB_ACCESS_RECOMMENDATIONS.md  AGENT_HOWTO_PUSH.md  AGENT_SWITCHING.md  AUDIT_SUMMARY.md  AUTONOMOUS_EXTRACTION_SUMMARY.md  BIGQUERY_GCLOUD_ACCOUNT_FIX.md  BIGQUERY_SQLPARSE_FIX.md  BUG_FIX_SUMMARY.md  BUG_SUMMARY_RETINA_COORDINATES.md  CHANGELOG.md  CHANGES_FROM_UPSTREAM.md  CLAUDE.md  CLEANUP_COMPLETE.md  CONFIG.md  CONNEXUS_MULTIWINDOW_FIX_SUMMARY.md  CONNEXUS_RPA_KNOWLEDGE_ARTICLE.md  CONNEXUS_SEARCH_STRATEGY_RECOMMENDATIONS.md  CONTRIBUTING.md  DEBUG_OCR_TOOL_README.md  DEV_CONSOLE.md  DYNAMIC_DEPTH_IMPLEMENTATION.md  ENVIRONMENT_VARIABLES.md  ERROR_LOG_FIX_SUMMARY.md  EXAMPLE_MAC_APP_LAUNCHER.md  (+180 more)
.beads/: issues.jsonl
.claude/: settings.json  settings.local.json
.code_puppy/: version_store.db
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.qodo/: .gitignore  analysis.yaml  config.yaml  project_context.md  workflows.yaml
_docs/: FAQ.md  Overview.md  _Index.md  _Manifest.md
bigquery_results/: card-entry-device-distribution-20251210-191437.csv  location-distribution-20251210-191427.csv  order-types-distribution-20251210-191410.csv  query-0060ef20-20251210-095121.csv  query-20beff8a-20251210-093551.csv  query-25ebdab5-20251210-093619.csv  query-4c9b6682-20251210-095201.csv  query-4fd0632e-20251210-091724.csv  query-7155955f-20251210-095227.csv  query-84160318-20251210-093504.csv  query-b0444633-20251210-093249.csv  query-b69c324b-20251210-094938.csv  query-b9ea60df-20251210-093517.csv  query-c87e73aa-20251210-030941.csv  query-db2b620f-20251210-095249.csv  query-fab14ed1-20251210-095135.csv  scan-and-go-joined-transactions-20251210-193330.csv  scan-and-go-transactions-20251210-191511.csv
code_agent/: __init__.py  agent.py  agent_prompts.py  agent_tools.py  main.py  test_agent_tools.py
code_puppy/: __init__.py  __main__.py  agent.py  agent_prompts.py  auth.py  bootstrap.py  bootstrap_profiles.py  bootstrap_wizard.py  branding.py  callbacks.py  cancellation_capability.py  cancellation_token.py  chatgpt_codex_client.py  claude_cache_client.py  cli_runner.py  config.py  content_filter_retry.py  error_logging.py  events.py  gemini_code_assist.py  gemini_model.py  globals.py  http_server.py  http_utils.py  init.py  item_visibility.py  keymap.py  llm_retry.py  loading_messages.py  main.py  message_history_processor.py  model_factory.py  model_switching.py  model_utils.py  models.json  models_dev_api.json  models_dev_parser.py  output_quiescence.py  pause_manager.py  permissions.py  (+38 more)
cost_center/: __init__.py
design/: multi_agent.md
docs/: AGENT_SKILLS.md  ANDROID_INSTALL.md  BUN_MIGRATION_PLAN.md  CEREBRAS.md  CONTINUITY_COMPACTION.md  CONTINUITY_COMPACTION_LIVE_EVAL.md  FLUX.md  HOOKS.md  I18N.md  INTERACTIVE_REGRESSION_CHECKLIST.md  IN_PLACE_STATUS_PLAN.md  LOCAL_PROVIDERS.md  PARITY_BACKLOG.md  PDF_SUPPORT.md  RELEASING.md  SECURITY.md  SESSION_LOGGING.md  SHELL_MODE.md  SHOWCASE_CANVAS_GRADER.md  THRESHOLD_COMPACTION_LIVE_EVAL.md  TOOL_DISCOVERY_IMPLEMENTATION.md  TOOL_DISCOVERY_NON_GLOBAL.md  TOOL_DISCOVERY_SUMMARY.md  TUI_PARITY_GAPS.md  TUI_REBUILD_PLAN.md  data_analytics_knowledge_template.md  external-plugins.md  how-to-use-access-TUI.md  msgraph_agent.md  puppy_desk_migration_issues.md  servicenow_integration.md
examples/: simple-agent.json  test_gemini_streaming.py
fizzbuzzwuzz/: __init__.py  __main__.py
mist/: __init__.py  __main__.py
packaging/: mist.spec
scripts/: AGENT_HANDOFF.md  AGENT_PROMPT_CONNEXUS.md  AGENT_QUICK_START.txt  CONNEXUS_DEBUG_COMMANDS.txt  CONNEXUS_DEBUG_PROMPT.md  README_ACCESSIBILITY_DEBUG.md  README_CONNEXUS_DEBUG.md  azure_filter_simulator.py  backfill_gh_to_artifactory.py  build_and_upload_windows_venv.ps1  build_install_local_whl.sh  build_portable_venv.ps1  build_portable_venv.sh  code-puppy-dev  common.sh  debug_accessibility.py  debug_calculator_elements.py  debug_connexus_quick.py  debug_connexus_tree.py  debug_ocr_visualization.py  demo_thinking_smoothness.py  install.sh  live_compaction_qa_eval.py  prepare_release.py  pretty_path.sh  pretty_print_path.sh  pup-local.sh  run_connexus_debug.bat  run_connexus_debug.ps1  run_pre_commit.sh  setup_windows.py  test_bug_fixes.py  test_element_tree.py  test_element_tree_windows.py  test_notepad_deep_audit.py  test_runner.py  test_windows_auto.py  test_windows_now.py  test_windows_quick.py  upload_pr_video.py  (+5 more)
tests/: claude_oauth_helpers.py  conftest.py  test_acp.py  test_acp_plugin.py  test_acp_server.py  test_agent.py  test_agent_command_handler.py  test_agent_creator_full_coverage.py  test_agent_gui_cub.py  test_agent_gui_cub_extended.py  test_agent_history_persistence.py  test_agent_orchestrator.py  test_agent_pinned_models.py  test_agent_reasoning_settings.py  test_agent_refresh.py  test_agent_singleton.py  test_agent_switching.py  test_agent_tools.py  test_agent_tools_coverage.py  test_agent_tools_extended.py  test_agent_tools_full_coverage.py  test_ask_user_question_full_coverage.py  test_ask_user_question_schema_input_modes.py  test_auto_save_session.py  test_base_agent_run_with_mcp.py  test_bigquery_client.py  test_bootstrap.py  test_bootstrap_wizard.py  test_browser_manager_missing_playwright.py  test_browser_optional.py  test_callback_extensions.py  test_callbacks.py  test_callbacks_extended.py  test_cancel_stdin_flush.py  test_chatgpt_codex_client.py  test_claude_cache_client.py  test_claude_cache_client_full_coverage.py  test_claude_oauth_agent_retry.py  test_claude_oauth_auth_detection.py  (+218 more)
(+2099 files in other folders)
