[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-puppy"
version = "0.0.253"
description = "Code generation agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic-ai==1.0.5",
    "httpx[http2]>=0.24.1",
    "rich>=13.4.2",
    "logfire>=0.7.1",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "bs4>=0.0.2",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
    "httpx-limiter>=0.3.0",
    "prompt-toolkit>=3.0.52",
    "pathspec>=0.11.0",
    "rapidfuzz>=3.13.0",
    "json-repair>=0.46.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "PyJWT>=2.8.0",
    "textual>=5.0.0",
    "termcolor>=3.1.0",
    "textual-dev>=1.7.0",
    "pyfiglet>=0.8.post1",
    "openai>=1.99.1",
    "ripgrep==14.1.0",
    "tenacity>=8.2.0",
    "playwright>=1.40.0",
    "camoufox>=0.4.11",
    "dbos>=2.0.0",
    "markdownify>=0.11.0",
    "pyyaml>=6.0.0",
    # GUI-Cub dependencies
    "pyautogui>=0.9.40,<0.9.42",  # Locked for atomacos compatibility (macOS)
    "pillow>=11.0.0",  # Updated from 10.0.0 - latest with security fixes
    "opencv-python>=4.10.0",  # Updated from 4.8.0 - latest stable
    "pytesseract>=0.3.13",  # Updated from 0.3.10 - latest stable
    "openpyxl>=3.1.5",  # Updated from 3.1.0 - latest stable
    # Platform-specific GUI-Cub dependencies (auto-detected)
    "atomacos>=3.2.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    # WinRT OCR dependencies (Windows 10+ native OCR)
    "winrt-Windows.Media.Ocr>=2.0.0; sys_platform == 'win32'",
    "winrt-Windows.Graphics.Imaging>=2.0.0; sys_platform == 'win32'",
    "winrt-Windows.Storage.Streams>=2.0.0; sys_platform == 'win32'",
    # Vision Framework OCR dependencies (macOS 10.15+ native OCR)
    "pyobjc-framework-Vision>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.23.1",
    "ruff>=0.11.11",
    "pexpect>=4.9.0",
]
authors = [
    {name = "Michael Pfaffenberger"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[[tool.uv.index]]
# Configure uv to use Walmart's internal PyPI registry
url = "https://pypi.ci.artifacts.walmart.com/artifactory/api/pypi/external-pypi/simple"
trusted-host = "pypi.ci.artifacts.walmart.com"

[project.scripts]
code-puppy = "code_puppy.main:main_entry"
pup = "code_puppy.main:main_entry"

[tool.logfire]
ignore_no_config = true

[tool.hatch.build]
packages = ["code_puppy"]
build_data = true

[tool.hatch.build.targets.wheel.shared-data]
"code_puppy/models.json" = "code_puppy/models.json"
"code_puppy/plugins/walmart_specific/certs/" = "code_puppy/plugins/walmart_specific/certs/"

[[tool.hatch.build.targets.sdist.include]]
path = "code_puppy/models.json"

[[tool.hatch.build.targets.sdist.include]]
path = "code_puppy/plugins/walmart_specific/certs/"

[tool.pytest.ini_options]
addopts = "--cov=code_puppy --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: marks tests as async (deferred from pytest-asyncio)"
]

[tool.coverage.run]
omit = ["code_puppy/main.py"]

[tool.uv]
python-preference = "only-managed"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.23.1",
    "ruff>=0.11.11",
    "pexpect>=4.9.0",
]
